# nost

./: .env.dist  .gitignore  Cargo.toml  README.md  config.toml.dist
.github/workflows/: .unit-tests.yml
github/workflows/: .unit-tests.yml
src/: annotation.rs  main.rs  not.rs  work.rs
src/annotations/: annotate.rs  extract.rs  extractor.rs  filter.rs  mod.rs  models.rs  parse.rs  parser.rs
src/commands/: mod.rs  new.rs  new_folder.rs  work.rs
src/configurations/: create.rs  find.rs  get.rs  init.rs  mod.rs  models.rs  upsert.rs
src/dates/: get.rs
src/events/: find.rs  mod.rs  models.rs  record.rs
src/files/: append.rs  build_paths.rs  check_content.rs  create.rs  find.rs  finder.rs  mod.rs  name.rs  name_generator.rs  path_builder.rs
src/nots/: create.rs  creator.rs  get.rs
src/plugins/: mod.rs
src/plugins/gdarquie_work/: mod.rs  work.rs
src/plugins/gdarquie_work/commands/: end_work.rs  mod.rs  start_work.rs  work_stats.rs
src/plugins/gdarquie_work/work_annotations/: find.rs  mod.rs  models.rs
src/plugins/work/: work.rs
src/projects/: initialize.rs
