[package]
name = "nost"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1"
dotenv = "0.15.0"
chrono = "0.4"
log = "0.4.28"
env_logger = "0.11.8"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"

[dependencies.uuid]
version = "1.17.0"
# generate random UUIDs
features = [
    "v4",
]

[dev-dependencies]
tempfile = "3"
gag = "1"
serial_test = "2"
